# open-scissor

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  README.md  Vagrantfile  appveyor.yml  install-dependencies.sh  install.sh
.github/: CODE_OF_CONDUCT.md  (+3 more)
docker/d-streamon-master/d-streamon/streamon/: .gitignore  CMakeCache_old.txt  CMakeLists.txt  README  blockmon.README  blockmon_NOPFQ  clean.sh  start.sh
docker/d-streamon-master/d-streamon/streamon/blocks/: CDRSource.cpp  ComboSZE2Source.cpp  IPFIXExporter.cpp  L4Demux.cpp  Null.cpp  PFQSource.cpp  PFRingSource.cpp  PcapSource.cpp  ZMQSource.cpp
docker/d-streamon-master/d-streamon/streamon/config/: modbus_device_scan.xml  modbus_dos.xml  modbus_function_scan.xml  nuvla_test.xml  open-scissor.xml  portscan.xml  swagger.xml
docker/d-streamon-master/d-streamon/streamon/config/new_old/: config.xml  config_DNS_SRFG_1.xml  config_ddos.xml  config_dns.xml  config_portscan(sicurezza).xml  config_portscan.xml  config_portscan_lastGood.xml  config_portscan_or.xml  modbus_device_scan.xml  modbus_dos-2.xml  modbus_ip_scan.xml
docker/d-streamon-master/d-streamon/streamon/config/old/: conf_modbus1.xml  conf_modbus2-2.xml  conf_modbus2-3.xml  conf_modbus2.xml  conf_modbus3-2.xml  conf_modbus3.xml  conf_modbus4-2.xml  conf_modbus4.xml  conf_modbus5-2.xml  conf_modbus5.xml  conf_modbus6.xml  config_2.xml  config_3.xml  config_4.xml  config_5.xml  config_6.xml  config_cede-v3.tables.xml  config_cede_giulio.xml  config_cede_test.xml  config_cede_v4.tables.xml  config_conficker-to.xml  config_conficker-to_stat.xml  config_ddos-stat.xml  config_ddos-v3.xml  config_ddos-v3.xml~  config_dnsorphan.xml  config_dnsorphan_http2.xml  config_dnstun.xml  config_export.xml  config_marco.xml  config_msg.xml  config_p2p.xml  config_plot_prova_4_features.xml
docker/d-streamon-master/d-streamon/streamon/config/traces/: dos.pcap  modbus_device_scan.pcap  modbus_function_scan.pcap
docker/d-streamon-master/d-streamon/streamon/core/: Buffer.hpp  MarshFactory.hpp
docker/d-streamon-master/d-streamon/streamon/core/block/: Block.cpp  Block.hpp  BlockVariable.hpp  DBQueue.hpp  InGate.cpp  InGate.hpp  MpMcQueue.hpp  OutGate.hpp
docker/d-streamon-master/d-streamon/streamon/core/composition/: BlockFactory.hpp  Composition.cpp  Composition.hpp  CompositionManager.hpp
docker/d-streamon-master/d-streamon/streamon/core/message/: ClassId.hpp  MemoryBatch.hpp  Msg.hpp  MsgRegistry.hpp
docker/d-streamon-master/d-streamon/streamon/core/scheduler/: MpMcQueue.hpp  PoolManager.hpp  Scheduler.hpp  ThreadHandler.hpp  ThreadPool.hpp  Timer.hpp  TimerThread.hpp
docker/d-streamon-master/d-streamon/streamon/daemon/: backend_glue.cpp  bmdaemon.py  cli.py  config
docker/d-streamon-master/d-streamon/streamon/daemon/core/: block.py  blockinfo.py  blockinfoparser.py  bmlogging.py  bmparser.py  bmprocess.py  composition.py  host.py  returnvalue.py  spawner.py  threadpool.py
docker/d-streamon-master/d-streamon/streamon/messages/: CDRMessage.hpp  CounterIP_S.cpp  CounterIP_S.hpp  Flow.hpp  HttpPacket.cpp  HttpPacket.hpp  HttpRequest.cpp  HttpRequest.hpp  KeyFlag.cpp  KeyFlag.hpp  MonstreamMessage.hpp  NetTypes.cpp  NetTypes.hpp  NullMsg.hpp  Packet.cpp  Packet.hpp.BACKUP.9380.hpp  Packet.hpp.BASE.9380.hpp  Packet.hpp.LOCAL.9380.hpp  Packet.hpp.REMOTE.9380.hpp  PacketPlus.cpp  PacketPlus.hpp  modbus.hpp
docker/d-streamon-master/d-streamon/streamon/scripts/: actionlib.hpp  actions.py  actions_bak.py  bad_host_syn_test.sh  c.py  c_bak.py  classes.py  event.py  event.py~  fields.py  host_syn_test.sh  messages.xml  messages.xml~  moin.py  moin.py~  moin_bak.py  operators.hpp  shared.py  template.xml  templates.py
docker/d-streamon-master/d-streamon/streamon/streamon-plotter/: drawPerfdata.py  genIPC.py  genIPC_gauss.py  readIPC.py  readpipe.py  streamon_plotter.py  writepipe.py
docker/d-streamon-master/d-streamon/streamon/zmq-client/: zmq_client-static.cpp  zmq_client.cpp
(+498 files in other folders)
